update images and add focus to input box

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 </div>
 
 <div id="gabumon2">
-  <img src="http://img4.wikia.nocookie.net/__cb20090205062208/digimon/images/0/0e/Gabumon_t.gif">
+  <img src="http://www.digimon-paradijs.nl/digimon-analyzer/image2/gabumon.gif">
 </div>
 
 <div id="gabumon3">
-  <img src="http://img1.wikia.nocookie.net/__cb20090214032130/digimon/images/f/fd/Garurumon_t.gif">
+  <img src="http://1.bp.blogspot.com/_tCzdmTM_bsg/THg1O0TnhSI/AAAAAAAAACc/v_x5KQdwbO0/s320/Garurumon.gif">
 </div>
 
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
